<resources>
    <string name="app_name">Robo Kid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password">We will send you an One Time Password on this mobile</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_880">+880</string>
    <string name="Get_OTP">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_OTP">Didn\'t receive the OTP?</string>
    <string name="resend_OTP">Resend OTP</string>
    <string name="verify">Verify</string>
</resources>