<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_for_sendOTP"
    android:gravity="center_horizontal"
    tools:context=".SendOTP"
    tools:openDrawer="start">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/sendotp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/otp_verification"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/we_will_send_you_an_one_time_password"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_880"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint=" 17130"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/Get_OTP"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

</LinearLayout>